--- a/react.gradle
+++ b/react.gradle
@@ -30,7 +30,7 @@ def detectCliPath(config) {
     }
 
     def cliPath = ["node", "-e", "console.log(require('react-native/cli').bin);"].execute([], projectDir).text.trim()
-    
+
     if (cliPath) {
         return cliPath
     } else if (new File("${projectDir}/../../node_modules/react-native/cli.js").exists()) {
@@ -126,7 +126,7 @@ afterEvaluate {
         } else {
             execCommand.addAll([*nodeExecutableAndArgs, cliPath])
         }
-        
+
         def enableHermes = enableHermesForVariant(variant)
 
         def currentBundleTask = tasks.create(
@@ -146,6 +146,38 @@ afterEvaluate {
                 jsSourceMapsDir.deleteDir()
                 jsSourceMapsDir.mkdirs()
             }
+        //https://github.com/facebook/react-native/issues/22234
+          def flavorPathSegment = ""
+          android.productFlavors.all { flavor ->
+                                       if (targetName.toLowerCase().contains(flavor.name)) {
+                                         flavorPathSegment = flavor.name
+                                       }
+                                     }
+
+            doLast {
+                def moveFunc = { resSuffix ->
+                    File originalDir = file("$buildDir/generated/res/react/${flavorPathSegment}release/drawable-${resSuffix}")
+                    if (originalDir.exists()) {
+                        File destDir = file("$buildDir/../src/main/res/drawable-${resSuffix}")
+                        ant.move(file: originalDir, tofile: destDir)
+                    }
+                }
+                def moveRawFunc = { dir ->
+                    File originalDir = file("$buildDir/generated/res/react/${flavorPathSegment}release/${dir}")
+                    if (originalDir.exists()) {
+                        File destDir = file("$buildDir/../src/main/res/${dir}")
+                        ant.move(file: originalDir, tofile: destDir)
+                    }
+                }
+                moveFunc.curry("ldpi").call()
+                moveFunc.curry("mdpi").call()
+                moveFunc.curry("hdpi").call()
+                moveFunc.curry("xhdpi").call()
+                moveFunc.curry("xxhdpi").call()
+                moveFunc.curry("xxxhdpi").call()
+                moveRawFunc.curry("raw").call()
+            }
+
 
             // Set up inputs and outputs so gradle can cache the result
             inputs.files fileTree(dir: reactRoot, excludes: inputExcludes)
